renamed title, fixed photos, added picture to contact page, removed blog button from nav

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Brit Blog"
-description: "Brittnis Blog"
+name: "Brittni's Portfolio"
+description: "Brittni's Portfolio"
 
 markdown: redcarpet
 permalink: pretty
